--- a/src/views/components/GameBoardHeader/style.scss
+++ b/src/views/components/GameBoardHeader/style.scss
@@ -31,6 +31,10 @@
     &.dead {
       background-position: -78px -55px;
     }
+
+    &.winner {
+      background-position: -104px -55px;
+    }
   } 
 }
 
@@ -47,6 +51,10 @@
     &.dead {
       background-position: -117px -83px;
     }
+
+    &.winner {
+      background-position: -156px -83px;
+    }
   } 
 }
 
@@ -62,6 +70,10 @@
 
     &.dead {
       background-position: -156px -110px;
+    }
+
+    &.winner {
+      background-position: -208px -110px;
     }
   } 
 }
