--- a/src/views/components/App/style.scss
+++ b/src/views/components/App/style.scss
@@ -24,6 +24,14 @@ body {
     background: #184292;
   }
 
+  .dialog-game .gray {
+    background: #AAA;
+  }
+
+  .dialog-game table {
+    background: #BBB;
+  }
+
   .game-board {
     background: #7E7E7E;
 
