Fixed night mode

--- a/src/views/components/App/style.scss
+++ b/src/views/components/App/style.scss
@@ -90,6 +90,14 @@ body {
   .icon-number-200 {
     background-image: url(http://minesweeperonline.com/sprite200-night.gif);
   }
+
+  .leaderboard .menu {
+    color: #666;
+  }
+
+  .leaderboard .selected {
+    color: #069;
+  }
 }
 
 .app {
